# codecharacter-simulator-2022

./: .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  cc-sim.Dockerfile  cmake-format.yaml  conanfile.txt  docker-compose.yml  make_compile_commands.py  requirements.txt  setup_build.sh
.github/workflows/: cmake.yml  release.yml
cmake/: clang-format.cmake  cmake-format.cmake
src/: CMakeLists.txt  main.cpp
src/actor/: CMakeLists.txt  actor.cpp  actor.hpp
src/attack/: troop.hpp
src/attacker/: CMakeLists.txt  attacker.cpp  attacker.hpp
src/attacker/aerial_attacker/: CMakeLists.txt  aerial_attacker.cpp  aerial_attacker.hpp
src/attacker/ground_attacker/: CMakeLists.txt  ground_attacker.cpp  ground_attacker.hpp
src/defender/: CMakeLists.txt  defender.cpp  defender.hpp
src/defender/aerial_defender/: CMakeLists.txt  aerial_defender.cpp  aerial_defender.hpp
src/defender/ground_defender/: CMakeLists.txt  ground_defender.cpp  ground_defender.hpp
src/defense/: defense.hpp
src/game/: CMakeLists.txt  game.cpp  game.hpp
src/logger/: CMakeLists.txt  logger.cpp  logger.hpp
src/utils/: CMakeLists.txt  attributes.cpp  attributes.hpp  game_map.cpp  game_map.hpp  position.cpp  position.hpp
test/: CMakeLists.txt  attacker_tests.cpp  defender_tests.cpp  game_tests.cpp  position_tests.cpp  test.cpp
